--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="javascripts/jquery.textWrapper.js"></script>
+    <script src="javascripts/main.js"></script>
     <title>Jquery.textwrapper.js by oelmekki</title>
   </head>
 
@@ -38,6 +40,14 @@
 textarea content to a specific column width. </p>
 
 <p>This allows to right properly wrapped email from a webinterface.</p>
+
+<h2>
+<a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h2>
+
+<div id="demo-container">
+  <textarea cols="100" rows="10"></textarea>
+  <p>AutoWrapping : <span class="on">ON</span><span class="off">OFF</span></p>
+</div>
 
 <h2>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
