--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="javascripts/jquery.js"></script>
     <script src="javascripts/jquery.textWrapper.js"></script>
     <script src="javascripts/main.js"></script>
     <title>Jquery.textwrapper.js by oelmekki</title>
