ADD help for demo

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@ textarea content to a specific column width. </p>
 <div id="demo-container">
   <textarea cols="100" rows="10"></textarea>
   <p>AutoWrapping : <span class="on">ON</span><span class="off">OFF</span></p>
+
+  <p>When you're inside textarea :</p>
+
+  <ul>
+    <li>Use <code>Control + m</code> (mute) to toggle autowrapping</li>
+    <li>Use <code>Control + l</code> (line) to manually wrap a paragraph</li>
+  </ul>
 </div>
 
 <h2>
