--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <p>TextWrapper is a jQuery plugin that allows to automatically wrap a 
 textarea content to a specific column width. </p>
 
-<p>This allows to right properly wrapped email from a webinterface.</p>
+<p>This allows to write properly wrapped email from a webinterface.</p>
 
 <h2>
 <a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h2>
