--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ mute).</p>
 (for : control line). A paragraph is a group of lines separated from 
 other paragraphs with blank lines.</p>
 
-<p>The automatic wrapping state has not effect on manual wrapping.</p>
+<p>The automatic wrapping state has no effect on manual wrapping.</p>
 
 <h2>
 <a name="quotes" class="anchor" href="#quotes"><span class="octicon octicon-link"></span></a>Quotes</h2>
