--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ textarea content to a specific column width. </p>
 <h2>
 <a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h2>
 
+<p>Tell us a story about ducks ! Then, when you got it, paste text and press <code>Control + l</code> (like : line).</p>
+
 <div id="demo-container">
   <textarea cols="75" rows="10"></textarea>
   <p>AutoWrapping : <span class="on">ON</span><span class="off">OFF</span></p>
