REFACTOR remove heading duplication

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
 
         <header>
-          <h1>Jquery.textwrapper.js</h1>
+          <h1>Jquery.textWrapper.js</h1>
           <h2>A jQuery plugin to automatically wrap text and write proper mails in textareas.</h2>
         </header>
 
@@ -34,8 +34,6 @@
         <hr>
 
         <section id="main_content">
-          <h1>
-<a name="jquerytextwrapperjs" class="anchor" href="#jquerytextwrapperjs"><span class="octicon octicon-link"></span></a>jquery.textWrapper.js</h1>
 
 <p>TextWrapper is a jQuery plugin that allows to automatically wrap a 
 textarea content to a specific column width. </p>
