REFACTOR more specific demo docs

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ textarea content to a specific column width. </p>
 <h2>
 <a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h2>
 
-<p>Tell us a story about ducks ! Then, when you got it, paste text and press <code>Control + l</code> (like : line) inside one of your new paragraphs.</p>
+<p>Tell us a story about ducks ! Then, when you got it, paste text and press <code>Control + l</code> (like : line) inside your longest new paragraph.</p>
 
 <div id="demo-container">
   <textarea cols="75" rows="10"></textarea>
